[project]
name = "music-clustering"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
#music-clustering = "music_clustering:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
