[project]
name = "music-clustering"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Karn Wong", email = "karn@karnwong.me" }
]
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "soundfile>=0.13.1",
]

[project.scripts]
#music-clustering = "music_clustering:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
